{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 69,
  "lineage": "2f4a1126-b717-fdd3-341d-7a1e49b7026d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "externalLB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer/frontendIPConfigurations/FGT-Customer-ELB-FortinetExternalSubnet-FrontEnd",
                "load_balancer_rules": [
                  "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer/loadBalancingRules/PublicLBRule-FE1-http",
                  "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer/loadBalancingRules/PublicLBRule-FE1-udp10551"
                ],
                "name": "FGT-Customer-ELB-FortinetExternalSubnet-FrontEnd",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/publicIPAddresses/FGT-Customer-FGT-PIP"
              }
            ],
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer",
            "location": "eastus",
            "name": "FGT-Customer-ExternalLoadBalancer",
            "resource_group_name": "rsg-thiagopontes",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_public_ip.ClusterPublicIP",
            "azurerm_resource_group.res-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "internalLB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-InternalLoadBalancer/frontendIPConfigurations/FGT-Customer-ILB-FortinetInternalSubnet-FrontEnd",
                "load_balancer_rules": [
                  "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-InternalLoadBalancer/loadBalancingRules/lbruleFE2all"
                ],
                "name": "FGT-Customer-ILB-FortinetInternalSubnet-FrontEnd",
                "private_ip_address": "172.18.10.68",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/virtualNetworks/Vnet-Customer-Sdwan/subnets/FortinetInternalSubnet"
              }
            ],
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-InternalLoadBalancer",
            "location": "eastus",
            "name": "FGT-Customer-InternalLoadBalancer",
            "private_ip_address": "172.18.10.68",
            "private_ip_addresses": [
              "172.18.10.68"
            ],
            "resource_group_name": "rsg-thiagopontes",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.res-0",
            "azurerm_subnet.privatesubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "res-10",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer01-Nic2/ipConfigurations/ipconfig1",
              "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer02-Nic2/ipConfigurations/ipconfig1"
            ],
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-InternalLoadBalancer/backendAddressPools/FGT-Customer-ILB-FortinetInternalSubnet-BackEnd",
            "load_balancing_rules": [
              "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-InternalLoadBalancer/loadBalancingRules/lbruleFE2all"
            ],
            "loadbalancer_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-InternalLoadBalancer",
            "name": "FGT-Customer-ILB-FortinetInternalSubnet-BackEnd"
          },
          "dependencies": [
            "azurerm_lb.internalLB",
            "azurerm_resource_group.res-0",
            "azurerm_subnet.privatesubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "res-8",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer02-Nic1/ipConfigurations/ipconfig1",
              "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer01-Nic1/ipConfigurations/ipconfig1"
            ],
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer/backendAddressPools/FGT-Customer-ELB-FortinetExternalSubnet-BackEnd",
            "load_balancing_rules": [
              "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer/loadBalancingRules/PublicLBRule-FE1-udp10551",
              "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer/loadBalancingRules/PublicLBRule-FE1-http"
            ],
            "loadbalancer_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer",
            "name": "FGT-Customer-ELB-FortinetExternalSubnet-BackEnd"
          },
          "dependencies": [
            "azurerm_lb.externalLB",
            "azurerm_public_ip.ClusterPublicIP",
            "azurerm_resource_group.res-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "externalLB-rule-probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer/probes/lbprobe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer/loadBalancingRules/PublicLBRule-FE1-http",
              "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer/loadBalancingRules/PublicLBRule-FE1-udp10551"
            ],
            "loadbalancer_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer",
            "name": "lbprobe",
            "number_of_probes": 2,
            "port": 8008,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/"
          },
          "dependencies": [
            "azurerm_lb.externalLB",
            "azurerm_public_ip.ClusterPublicIP",
            "azurerm_resource_group.res-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "internalLB-rule-probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-InternalLoadBalancer/probes/lbprobe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-InternalLoadBalancer/loadBalancingRules/lbruleFE2all"
            ],
            "loadbalancer_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-InternalLoadBalancer",
            "name": "lbprobe",
            "number_of_probes": 2,
            "port": 8008,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/"
          },
          "dependencies": [
            "azurerm_lb.internalLB",
            "azurerm_resource_group.res-0",
            "azurerm_subnet.privatesubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "externalLB-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer/backendAddressPools/FGT-Customer-ELB-FortinetExternalSubnet-BackEnd"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer/frontendIPConfigurations/FGT-Customer-ELB-FortinetExternalSubnet-FrontEnd",
            "frontend_ip_configuration_name": "FGT-Customer-ELB-FortinetExternalSubnet-FrontEnd",
            "frontend_port": 80,
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer/loadBalancingRules/PublicLBRule-FE1-http",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer",
            "name": "PublicLBRule-FE1-http",
            "probe_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer/probes/lbprobe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.externalLB",
            "azurerm_lb_backend_address_pool.res-8",
            "azurerm_lb_probe.externalLB-rule-probe",
            "azurerm_public_ip.ClusterPublicIP",
            "azurerm_resource_group.res-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "externalLB-rule-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer/backendAddressPools/FGT-Customer-ELB-FortinetExternalSubnet-BackEnd"
            ],
            "backend_port": 10551,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer/frontendIPConfigurations/FGT-Customer-ELB-FortinetExternalSubnet-FrontEnd",
            "frontend_ip_configuration_name": "FGT-Customer-ELB-FortinetExternalSubnet-FrontEnd",
            "frontend_port": 10551,
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer/loadBalancingRules/PublicLBRule-FE1-udp10551",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer",
            "name": "PublicLBRule-FE1-udp10551",
            "probe_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer/probes/lbprobe",
            "protocol": "Udp"
          },
          "dependencies": [
            "azurerm_lb.externalLB",
            "azurerm_lb_backend_address_pool.res-8",
            "azurerm_lb_probe.externalLB-rule-probe",
            "azurerm_public_ip.ClusterPublicIP",
            "azurerm_resource_group.res-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "internalLB-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-InternalLoadBalancer/backendAddressPools/FGT-Customer-ILB-FortinetInternalSubnet-BackEnd"
            ],
            "backend_port": 0,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-InternalLoadBalancer/frontendIPConfigurations/FGT-Customer-ILB-FortinetInternalSubnet-FrontEnd",
            "frontend_ip_configuration_name": "FGT-Customer-ILB-FortinetInternalSubnet-FrontEnd",
            "frontend_port": 0,
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-InternalLoadBalancer/loadBalancingRules/lbruleFE2all",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-InternalLoadBalancer",
            "name": "lbruleFE2all",
            "probe_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-InternalLoadBalancer/probes/lbprobe",
            "protocol": "All"
          },
          "dependencies": [
            "azurerm_lb.internalLB",
            "azurerm_lb_backend_address_pool.res-10",
            "azurerm_lb_probe.internalLB-rule-probe",
            "azurerm_resource_group.res-0",
            "azurerm_subnet.privatesubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "activeport1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer01-Nic1",
            "internal_domain_name_suffix": "4ocpyfugwcve1fzazkac3t4oph.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.18.10.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/virtualNetworks/Vnet-Customer-Sdwan/subnets/FortinetExternalSubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-31-C6-5A",
            "name": "FGT-Customer01-Nic1",
            "private_ip_address": "172.18.10.4",
            "private_ip_addresses": [
              "172.18.10.4"
            ],
            "resource_group_name": "rsg-thiagopontes",
            "tags": {
              "Source": "terraform"
            },
            "virtual_machine_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Compute/virtualMachines/FGT-Customer01"
          },
          "dependencies": [
            "azurerm_resource_group.res-0",
            "azurerm_subnet.publicsubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "activeport2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer01-Nic2",
            "internal_domain_name_suffix": "4ocpyfugwcve1fzazkac3t4oph.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.18.10.69",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/virtualNetworks/Vnet-Customer-Sdwan/subnets/FortinetInternalSubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-31-C9-C0",
            "name": "FGT-Customer01-Nic2",
            "private_ip_address": "172.18.10.69",
            "private_ip_addresses": [
              "172.18.10.69"
            ],
            "resource_group_name": "rsg-thiagopontes",
            "tags": {
              "Source": "terraform"
            },
            "virtual_machine_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Compute/virtualMachines/FGT-Customer01"
          },
          "dependencies": [
            "azurerm_resource_group.res-0",
            "azurerm_subnet.privatesubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "activeport3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer01-Nic3",
            "internal_domain_name_suffix": "4ocpyfugwcve1fzazkac3t4oph.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.18.10.196",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/virtualNetworks/Vnet-Customer-Sdwan/subnets/FortinetHASyncSubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-31-C7-6B",
            "name": "FGT-Customer01-Nic3",
            "private_ip_address": "172.18.10.196",
            "private_ip_addresses": [
              "172.18.10.196"
            ],
            "resource_group_name": "rsg-thiagopontes",
            "tags": {
              "Source": "terraform"
            },
            "virtual_machine_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Compute/virtualMachines/FGT-Customer01"
          },
          "dependencies": [
            "azurerm_resource_group.res-0",
            "azurerm_subnet.hasyncsubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "activeport4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer01-Nic4",
            "internal_domain_name_suffix": "4ocpyfugwcve1fzazkac3t4oph.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.18.10.133",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/publicIPAddresses/FGT-Customer-FGT-A-MGMT-PIP",
                "subnet_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/virtualNetworks/Vnet-Customer-Sdwan/subnets/FortinetManagementSubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-31-C4-7B",
            "name": "FGT-Customer01-Nic4",
            "private_ip_address": "172.18.10.133",
            "private_ip_addresses": [
              "172.18.10.133"
            ],
            "resource_group_name": "rsg-thiagopontes",
            "tags": {
              "Source": "terraform"
            },
            "virtual_machine_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Compute/virtualMachines/FGT-Customer01"
          },
          "dependencies": [
            "azurerm_public_ip.ActiveMGMTIP",
            "azurerm_resource_group.res-0",
            "azurerm_subnet.mgmtsubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "passiveport1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer02-Nic1",
            "internal_domain_name_suffix": "4ocpyfugwcve1fzazkac3t4oph.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.18.10.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/virtualNetworks/Vnet-Customer-Sdwan/subnets/FortinetExternalSubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-2A-14-D2",
            "name": "FGT-Customer02-Nic1",
            "private_ip_address": "172.18.10.5",
            "private_ip_addresses": [
              "172.18.10.5"
            ],
            "resource_group_name": "rsg-thiagopontes",
            "tags": {
              "Source": "terraform"
            },
            "virtual_machine_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Compute/virtualMachines/FGT-Customer02"
          },
          "dependencies": [
            "azurerm_resource_group.res-0",
            "azurerm_subnet.publicsubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "passiveport2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer02-Nic2",
            "internal_domain_name_suffix": "4ocpyfugwcve1fzazkac3t4oph.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.18.10.70",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/virtualNetworks/Vnet-Customer-Sdwan/subnets/FortinetInternalSubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-2A-11-2F",
            "name": "FGT-Customer02-Nic2",
            "private_ip_address": "172.18.10.70",
            "private_ip_addresses": [
              "172.18.10.70"
            ],
            "resource_group_name": "rsg-thiagopontes",
            "tags": {
              "Source": "terraform"
            },
            "virtual_machine_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Compute/virtualMachines/FGT-Customer02"
          },
          "dependencies": [
            "azurerm_resource_group.res-0",
            "azurerm_subnet.privatesubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "passiveport3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer02-Nic3",
            "internal_domain_name_suffix": "4ocpyfugwcve1fzazkac3t4oph.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.18.10.197",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/virtualNetworks/Vnet-Customer-Sdwan/subnets/FortinetHASyncSubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-2A-1A-3D",
            "name": "FGT-Customer02-Nic3",
            "private_ip_address": "172.18.10.197",
            "private_ip_addresses": [
              "172.18.10.197"
            ],
            "resource_group_name": "rsg-thiagopontes",
            "tags": {
              "Source": "terraform"
            },
            "virtual_machine_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Compute/virtualMachines/FGT-Customer02"
          },
          "dependencies": [
            "azurerm_resource_group.res-0",
            "azurerm_subnet.hasyncsubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "passiveport4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer02-Nic4",
            "internal_domain_name_suffix": "4ocpyfugwcve1fzazkac3t4oph.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.18.10.134",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/publicIPAddresses/FGT-Customer-FGT-B-MGMT-PIP",
                "subnet_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/virtualNetworks/Vnet-Customer-Sdwan/subnets/FortinetManagementSubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-2A-18-9F",
            "name": "FGT-Customer02-Nic4",
            "private_ip_address": "172.18.10.134",
            "private_ip_addresses": [
              "172.18.10.134"
            ],
            "resource_group_name": "rsg-thiagopontes",
            "tags": {
              "Source": "terraform"
            },
            "virtual_machine_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Compute/virtualMachines/FGT-Customer02"
          },
          "dependencies": [
            "azurerm_public_ip.PassiveMGMTIP",
            "azurerm_resource_group.res-0",
            "azurerm_subnet.mgmtsubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "res-12",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer/backendAddressPools/FGT-Customer-ELB-FortinetExternalSubnet-BackEnd",
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer01-Nic1/ipConfigurations/ipconfig1|/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer/backendAddressPools/FGT-Customer-ELB-FortinetExternalSubnet-BackEnd",
            "ip_configuration_name": "ipconfig1",
            "network_interface_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer01-Nic1"
          },
          "dependencies": [
            "azurerm_lb.externalLB",
            "azurerm_lb_backend_address_pool.res-8",
            "azurerm_network_interface.activeport1",
            "azurerm_public_ip.ClusterPublicIP",
            "azurerm_resource_group.res-0",
            "azurerm_subnet.publicsubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "res-15",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-InternalLoadBalancer/backendAddressPools/FGT-Customer-ILB-FortinetInternalSubnet-BackEnd",
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer01-Nic2/ipConfigurations/ipconfig1|/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-InternalLoadBalancer/backendAddressPools/FGT-Customer-ILB-FortinetInternalSubnet-BackEnd",
            "ip_configuration_name": "ipconfig1",
            "network_interface_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer01-Nic2"
          },
          "dependencies": [
            "azurerm_lb.internalLB",
            "azurerm_lb_backend_address_pool.res-10",
            "azurerm_network_interface.activeport2",
            "azurerm_resource_group.res-0",
            "azurerm_subnet.privatesubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "res-22",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer/backendAddressPools/FGT-Customer-ELB-FortinetExternalSubnet-BackEnd",
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer02-Nic1/ipConfigurations/ipconfig1|/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-ExternalLoadBalancer/backendAddressPools/FGT-Customer-ELB-FortinetExternalSubnet-BackEnd",
            "ip_configuration_name": "ipconfig1",
            "network_interface_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer02-Nic1"
          },
          "dependencies": [
            "azurerm_lb.externalLB",
            "azurerm_lb_backend_address_pool.res-8",
            "azurerm_network_interface.passiveport1",
            "azurerm_public_ip.ClusterPublicIP",
            "azurerm_resource_group.res-0",
            "azurerm_subnet.publicsubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "res-25",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-InternalLoadBalancer/backendAddressPools/FGT-Customer-ILB-FortinetInternalSubnet-BackEnd",
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer02-Nic2/ipConfigurations/ipconfig1|/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/loadBalancers/FGT-Customer-InternalLoadBalancer/backendAddressPools/FGT-Customer-ILB-FortinetInternalSubnet-BackEnd",
            "ip_configuration_name": "ipconfig1",
            "network_interface_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer02-Nic2"
          },
          "dependencies": [
            "azurerm_lb.internalLB",
            "azurerm_lb_backend_address_pool.res-10",
            "azurerm_network_interface.passiveport2",
            "azurerm_resource_group.res-0",
            "azurerm_subnet.privatesubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "res-13",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer01-Nic1|/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkSecurityGroups/FGT-Customer-anrsqfr4sbm2u-NSG",
            "network_interface_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer01-Nic1",
            "network_security_group_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkSecurityGroups/FGT-Customer-anrsqfr4sbm2u-NSG"
          },
          "dependencies": [
            "azurerm_network_interface.activeport1",
            "azurerm_network_security_group.res-31",
            "azurerm_resource_group.res-0",
            "azurerm_subnet.publicsubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "res-16",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer01-Nic2|/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkSecurityGroups/FGT-Customer-anrsqfr4sbm2u-NSG",
            "network_interface_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer01-Nic2",
            "network_security_group_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkSecurityGroups/FGT-Customer-anrsqfr4sbm2u-NSG"
          },
          "dependencies": [
            "azurerm_network_interface.activeport2",
            "azurerm_network_security_group.res-31",
            "azurerm_resource_group.res-0",
            "azurerm_subnet.privatesubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "res-18",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer01-Nic3|/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkSecurityGroups/FGT-Customer-anrsqfr4sbm2u-NSG",
            "network_interface_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer01-Nic3",
            "network_security_group_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkSecurityGroups/FGT-Customer-anrsqfr4sbm2u-NSG"
          },
          "dependencies": [
            "azurerm_network_interface.activeport3",
            "azurerm_network_security_group.res-31",
            "azurerm_resource_group.res-0",
            "azurerm_subnet.hasyncsubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "res-20",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer01-Nic4|/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkSecurityGroups/FGT-Customer-anrsqfr4sbm2u-NSG",
            "network_interface_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer01-Nic4",
            "network_security_group_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkSecurityGroups/FGT-Customer-anrsqfr4sbm2u-NSG"
          },
          "dependencies": [
            "azurerm_network_interface.activeport4",
            "azurerm_network_security_group.res-31",
            "azurerm_public_ip.ActiveMGMTIP",
            "azurerm_resource_group.res-0",
            "azurerm_subnet.mgmtsubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "res-23",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer02-Nic1|/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkSecurityGroups/FGT-Customer-anrsqfr4sbm2u-NSG",
            "network_interface_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer02-Nic1",
            "network_security_group_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkSecurityGroups/FGT-Customer-anrsqfr4sbm2u-NSG"
          },
          "dependencies": [
            "azurerm_network_interface.passiveport1",
            "azurerm_network_security_group.res-31",
            "azurerm_resource_group.res-0",
            "azurerm_subnet.publicsubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "res-26",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer02-Nic2|/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkSecurityGroups/FGT-Customer-anrsqfr4sbm2u-NSG",
            "network_interface_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer02-Nic2",
            "network_security_group_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkSecurityGroups/FGT-Customer-anrsqfr4sbm2u-NSG"
          },
          "dependencies": [
            "azurerm_network_interface.passiveport2",
            "azurerm_network_security_group.res-31",
            "azurerm_resource_group.res-0",
            "azurerm_subnet.privatesubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "res-28",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer02-Nic3|/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkSecurityGroups/FGT-Customer-anrsqfr4sbm2u-NSG",
            "network_interface_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer02-Nic3",
            "network_security_group_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkSecurityGroups/FGT-Customer-anrsqfr4sbm2u-NSG"
          },
          "dependencies": [
            "azurerm_network_interface.passiveport3",
            "azurerm_network_security_group.res-31",
            "azurerm_resource_group.res-0",
            "azurerm_subnet.hasyncsubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "res-30",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer02-Nic4|/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkSecurityGroups/FGT-Customer-anrsqfr4sbm2u-NSG",
            "network_interface_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkInterfaces/FGT-Customer02-Nic4",
            "network_security_group_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkSecurityGroups/FGT-Customer-anrsqfr4sbm2u-NSG"
          },
          "dependencies": [
            "azurerm_network_interface.passiveport4",
            "azurerm_network_security_group.res-31",
            "azurerm_public_ip.PassiveMGMTIP",
            "azurerm_resource_group.res-0",
            "azurerm_subnet.mgmtsubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-31",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkSecurityGroups/FGT-Customer-anrsqfr4sbm2u-NSG",
            "location": "eastus",
            "name": "FGT-Customer-anrsqfr4sbm2u-NSG",
            "resource_group_name": "rsg-thiagopontes",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Allow all in",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAllInbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow all out",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAllOutbound",
                "priority": 105,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Source": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.res-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-32",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow all in",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkSecurityGroups/FGT-Customer-anrsqfr4sbm2u-NSG/securityRules/AllowAllInbound",
            "name": "AllowAllInbound",
            "network_security_group_name": "FGT-Customer-anrsqfr4sbm2u-NSG",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "rsg-thiagopontes",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.res-31",
            "azurerm_resource_group.res-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-33",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow all out",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/networkSecurityGroups/FGT-Customer-anrsqfr4sbm2u-NSG/securityRules/AllowAllOutbound",
            "name": "AllowAllOutbound",
            "network_security_group_name": "FGT-Customer-anrsqfr4sbm2u-NSG",
            "priority": 105,
            "protocol": "*",
            "resource_group_name": "rsg-thiagopontes",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.res-31",
            "azurerm_resource_group.res-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ActiveMGMTIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/publicIPAddresses/FGT-Customer-FGT-A-MGMT-PIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.212.53.145",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "FGT-Customer-FGT-A-MGMT-PIP",
            "resource_group_name": "rsg-thiagopontes",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Source": "terraform"
            },
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "dependencies": [
            "azurerm_resource_group.res-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ClusterPublicIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "fgt-customer-anrsqfr4sbm2u",
            "fqdn": "fgt-customer-anrsqfr4sbm2u.eastus.cloudapp.azure.com",
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/publicIPAddresses/FGT-Customer-FGT-PIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.212.53.152",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "FGT-Customer-FGT-PIP",
            "resource_group_name": "rsg-thiagopontes",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Source": "terraform"
            },
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "dependencies": [
            "azurerm_resource_group.res-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PassiveMGMTIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/publicIPAddresses/FGT-Customer-FGT-B-MGMT-PIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.212.53.164",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "FGT-Customer-FGT-B-MGMT-PIP",
            "resource_group_name": "rsg-thiagopontes",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Source": "terraform"
            },
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "dependencies": [
            "azurerm_resource_group.res-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/routeTables/InternalRouteTable1/routes/default",
            "name": "default",
            "next_hop_in_ip_address": "172.18.10.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "rsg-thiagopontes",
            "route_table_name": "InternalRouteTable1",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_linux_virtual_machine.passivefgtvm",
            "azurerm_network_interface.passiveport1",
            "azurerm_network_interface.passiveport2",
            "azurerm_network_interface.passiveport3",
            "azurerm_network_interface.passiveport4",
            "azurerm_public_ip.ClusterPublicIP",
            "azurerm_public_ip.PassiveMGMTIP",
            "azurerm_resource_group.res-0",
            "azurerm_route_table.internal",
            "azurerm_subnet.hasyncsubnet",
            "azurerm_subnet.mgmtsubnet",
            "azurerm_subnet.privatesubnet",
            "azurerm_subnet.publicsubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/routeTables/InternalRouteTable1",
            "location": "eastus",
            "name": "InternalRouteTable1",
            "resource_group_name": "rsg-thiagopontes",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default",
                "next_hop_in_ip_address": "172.18.10.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/virtualNetworks/Vnet-Customer-Sdwan/subnets/FortinetInternalSubnet"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.res-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hasyncsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.18.10.192/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/virtualNetworks/Vnet-Customer-Sdwan/subnets/FortinetHASyncSubnet",
            "name": "FortinetHASyncSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rsg-thiagopontes",
            "virtual_network_name": "Vnet-Customer-Sdwan"
          },
          "dependencies": [
            "azurerm_resource_group.res-0",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mgmtsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.18.10.128/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/virtualNetworks/Vnet-Customer-Sdwan/subnets/FortinetManagementSubnet",
            "name": "FortinetManagementSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rsg-thiagopontes",
            "virtual_network_name": "Vnet-Customer-Sdwan"
          },
          "dependencies": [
            "azurerm_resource_group.res-0",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.18.10.64/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/virtualNetworks/Vnet-Customer-Sdwan/subnets/FortinetInternalSubnet",
            "name": "FortinetInternalSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rsg-thiagopontes",
            "virtual_network_name": "Vnet-Customer-Sdwan"
          },
          "dependencies": [
            "azurerm_resource_group.res-0",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.18.10.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/virtualNetworks/Vnet-Customer-Sdwan/subnets/FortinetExternalSubnet",
            "name": "FortinetExternalSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rsg-thiagopontes",
            "virtual_network_name": "Vnet-Customer-Sdwan"
          },
          "dependencies": [
            "azurerm_resource_group.res-0",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "internalassociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/virtualNetworks/Vnet-Customer-Sdwan/subnets/FortinetInternalSubnet",
            "route_table_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/routeTables/InternalRouteTable1",
            "subnet_id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/virtualNetworks/Vnet-Customer-Sdwan/subnets/FortinetInternalSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.res-0",
            "azurerm_route_table.internal",
            "azurerm_subnet.privatesubnet",
            "azurerm_virtual_network.res-40"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "res-40",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.18.10.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "16fc84f3-b086-4daa-9720-ca802ecfce7f",
            "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/virtualNetworks/Vnet-Customer-Sdwan",
            "location": "eastus",
            "name": "Vnet-Customer-Sdwan",
            "resource_group_name": "rsg-thiagopontes",
            "subnet": [
              {
                "address_prefix": "172.18.10.0/26",
                "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/virtualNetworks/Vnet-Customer-Sdwan/subnets/FortinetExternalSubnet",
                "name": "FortinetExternalSubnet"
              },
              {
                "address_prefix": "172.18.10.128/26",
                "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/virtualNetworks/Vnet-Customer-Sdwan/subnets/FortinetManagementSubnet",
                "name": "FortinetManagementSubnet"
              },
              {
                "address_prefix": "172.18.10.192/26",
                "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/virtualNetworks/Vnet-Customer-Sdwan/subnets/FortinetHASyncSubnet",
                "name": "FortinetHASyncSubnet"
              },
              {
                "address_prefix": "172.18.10.64/26",
                "id": "/subscriptions/b851d0d9-9a10-4098-9269-35e85eb3a698/resourceGroups/rsg-thiagopontes/providers/Microsoft.Network/virtualNetworks/Vnet-Customer-Sdwan/subnets/FortinetInternalSubnet",
                "name": "FortinetInternalSubnet"
              }
            ],
            "tags": {
              "Source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.res-0"
          ]
        }
      ]
    }
  ]
}